--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
 name: Java CI
 on: [push, pull_request]
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
-        java_version: [16, 17, 18]
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        java: [ 16, 17, 18 ]
+      fail-fast: false
+      max-parallel: 4
+    name: Test HelloWorld on JDK ${{ matrix.java }}, ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Set up JDK ${{ matrix.java }} ${{ matrix.os }}
+        uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: {{matrix.java_version}}
-      - run: java -jar UserRegistration
+          java-version: ${{ matrix.java }}
+          java-package: jdk
