--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,15 +5,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        java: [ 16, 17, 18 ]
-      fail-fast: false
-      max-parallel: 4
-    name: Test HelloWorld on JDK ${{ matrix.java }}, ${{ matrix.os }}
+        os: [ubuntu-latest]
+        java: [ 18 ]
+    name: Test UserRegistration on JDK ${{ matrix.java }}, ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK ${{ matrix.java }} ${{ matrix.os }}
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: ${{ matrix.java }}
           java-package: jdk
