--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     name: Test UserRegistration on JDK ${{ matrix.java }}, ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK ${{ matrix.java }} ${{ matrix.os }}
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.java }}
-          java-package: jdk
+          distribution: 'zulu'
+          java-version: {{matrtix.java}}
+      - run: java -cp java HelloWorldApp
