--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: {{matrtix.java}}
-      - run: java -cp java UserRegistration.form.UserRegistration
+          java-version: {{matrix.java}}
+      - run: java -cp java src.UserRegistration
