ci: use correct name on step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: {{matrix.java}}
+          java: {{matrix.java}}
       - run: java -cp java src.UserRegistration
