--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        java: [ 18 ]
+        java: [ '16', '17', '18' ]
     name: Test UserRegistration on JDK ${{ matrix.java }}, ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java: {{matrix.java}}
-      - run: java -cp java src.UserRegistration
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: ${{ matrix.java }}
+      - run: java -cp java src/UserRegistration
